<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.learningandroid.MainActivity">

    <item
        android:id="@+id/action_activity2"
        android:orderInCategory="100"
        android:title="@string/action_showActivity2"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activity3"
        android:orderInCategory="100"
        android:title="@string/action_Result"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fragment"
        android:orderInCategory="100"
        android:title="@string/action_fragment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tabbed"
        android:orderInCategory="100"
        android:title="@string/action_tabbed"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_other"
        android:orderInCategory="100"
        android:title="@string/action_other"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />

</menu>
