<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:balloonberry="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view"
        android:title="@string/action_view"
        android:icon="@android:drawable/ic_menu_view"
        balloonberry:showAsAction="always|withText"
        />

    <item
        android:id="@+id/action_contents"
        android:title="@string/action_contents"
        android:icon="@android:drawable/ic_menu_agenda"
        balloonberry:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_description"
        android:title="@string/action_description"
        android:icon="@android:drawable/ic_menu_info_details"
        balloonberry:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_assessment"
        android:title="@string/action_assessment"
        android:icon="@android:drawable/ic_menu_help"
        balloonberry:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_exercises"
        android:title="@string/action_exercises"
        android:icon="@android:drawable/ic_menu_edit"
        balloonberry:showAsAction="ifRoom"
        />

</menu>
