<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_2"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.learningandroid.Activity2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/firstTopTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/firstTopTextView"
            android:layout_margin="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/secondTopTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/firstTopTextView"
            android:layout_toEndOf="@+id/firstTopTextView"
            android:text="@string/secondTopTextView"
            android:layout_margin="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/topSecondButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topSecondButton"
            android:layout_below="@+id/secondTopTextView"
            android:layout_alignLeft="@+id/secondTopTextView"
            android:layout_alignStart="@+id/secondTopTextView" />

        <Button
            android:id="@+id/topFirstButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topFirstButton"
            android:layout_alignBaseline="@+id/topSecondButton"
            android:layout_alignBottom="@+id/topSecondButton"
            android:layout_alignLeft="@+id/firstTopTextView"
            android:layout_alignStart="@+id/firstTopTextView" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/firstMiddleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="firstMiddleTextView" />

        <TextView
            android:id="@+id/secondMiddleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="secondMiddleTextView" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/bottomTextView"
            android:text="@string/bottomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
